# ya_uftp

./: CMakeLists.txt  INSTALL  README  api_binder.cpp  api_binder.hpp  ya_uftp.cpp  ya_uftp.hpp
detail/: common.hpp  core.cpp  core.hpp  file_transfer_base.cpp  file_transfer_base.hpp  message.cpp  message.hpp  progress_notification.cpp  progress_notification.hpp
example/: receiver_demo.cpp  sender_demo.cpp
receiver/: adi.hpp  server.hpp
receiver/detail/: adi.cpp  announcement_monitor.cpp  announcement_monitor.hpp  file_receive_task.cpp  file_receive_task.hpp  files_accept_session.cpp  files_accept_session.hpp  server.cpp  session_context.cpp  session_context.hpp  worker.cpp  worker.hpp
sender/: adi.hpp  server.hpp
sender/detail/: adi.cpp  file_send_task.cpp  file_send_task.hpp  files_delivery_session.cpp  files_delivery_session.hpp  server.cpp  session_context.cpp  session_context.hpp  worker.cpp  worker.hpp
utilities/: network_intf.hpp
utilities/detail/: network_intf.cpp
